<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:text="Username"
        android:textColor="@color/peter"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:textColor="@color/peter"
        android:hint="Username"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:imeOptions="flagNoExtractUi|actionNext"
        android:background="@drawable/login_field"
        android:textColorHint="@color/lightGrey"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:text="Password"
        android:textColor="@color/peter"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:textColor="@color/peter"
        android:hint="Password"
        android:ems="10"
        android:imeOptions="flagNoExtractUi|actionGo"
        android:background="@drawable/login_field"
        android:textColorHint="@color/lightGrey"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp" />
    
    <Button
        android:id="@+id/bLogin"
        android:text="Login"
        android:textColor="@color/white"
        android:background="@color/peter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create an Account"
        android:textColor="@color/white"
        android:background="@color/peter"
        android:id="@+id/registerButton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:textSize="20dp" />

</LinearLayout>