<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:text="E-Mail"
        android:textColor="@color/peter"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:textColor="@color/peter"
        android:hint="Email"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:imeOptions="flagNoExtractUi|actionNext"
        android:background="@drawable/login_field"
        android:textColorHint="@color/lightGrey"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/peter"
        android:text="Password"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/regPassword"
        android:textColor="@color/peter"
        android:hint="Password"
        android:ems="10"
        android:imeOptions="flagNoExtractUi|actionNext"
        android:background="@drawable/login_field"
        android:textColorHint="@color/lightGrey"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/peter"
        android:text="Confirm Password"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:textColor="@color/peter"
        android:hint="Confirm Password"
        android:ems="10"
        android:imeOptions="flagNoExtractUi|actionGo"
        android:background="@drawable/login_field"
        android:textColorHint="@color/lightGrey"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20dp" />

    <Button
        android:id="@+id/bRegister"
        android:text="Register"
        android:background="@color/peter"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="20dp" />

</LinearLayout>
